# tractor-beam

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  vintage-sw-sourcing-engine-spec.md
.github/workflows/: ci.yml
sw_sourcing/: cli.py  dashboard.py  diagnostics.py  lock.py  network.py  pipeline.py
sw_sourcing/adapters/: base.py  craigslist.py  ebay.py  facebook_assist.py  tier2_apify.py
sw_sourcing/alerts/: discord.py  email.py
sw_sourcing/core/: authenticity.py  decision.py  dedupe.py  negotiation.py  prefilter.py  schema.py  vision.py
sw_sourcing/storage/: config.py  db.py
tests/fixtures/: apify_mercari_dataset.json  craigslist_search_rss.xml  ebay_item_summary_search.json
tests/integration/: test_claude_cli_live.py  test_ebay_live.py
tests/unit/: conftest.py  factories.py  test_cli.py  test_dashboard.py  test_diagnostics.py  test_lock.py  test_network.py  test_pipeline.py  test_schema.py
tests/unit/adapters/: test_craigslist.py  test_ebay.py  test_facebook_assist.py  test_tier2_apify.py
tests/unit/alerts/: test_discord.py  test_email.py
tests/unit/core/: test_authenticity.py  test_decision.py  test_dedupe.py  test_negotiation.py  test_prefilter.py  test_vision.py
tests/unit/storage/: test_config.py  test_db.py
